--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="loader-text">Rayne Molloy</div>
 </div>
     
-    <script src="js/main.js"></script>t
+    <script src="js/main.js"></script>
     <script src="js/galaxy.js"></script>
 </body>
 </html>
